<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/shape_fragmentlayout"
    android:layout_height="match_parent"
  android:gravity="center"
    android:orientation="vertical">


    <Button
        android:id="@+id/select_btn_fanled"
        style="@style/btn_selectequitment_stytle"
        android:layout_marginTop="0dp"
        android:text="@string/btn_fenled" />

    <Button
        android:id="@+id/select_btn_open"
        android:text="@string/btn_light"
        style="@style/btn_selectequitment_stytle" />

    <Button
        android:id="@+id/select_btn_led"
        style="@style/btn_selectequitment_stytle"
        android:text="@string/btn_led" />

    <Button
        android:id="@+id/select_btn_bath"
        style="@style/btn_selectequitment_stytle"
        android:text="@string/btn_bath" />

</LinearLayout>