<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:layout_height="50dp"
        >
        <RelativeLayout

            style="@style/TitleBar">

            <TextView
                style="@style/TitleTextView"
                android:layout_alignParentRight="true"
                android:text="重置密码" />

            <LinearLayout
                android:id="@+id/linearlayout_backup"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@color/colorMainGray">

                <ImageButton
                    android:id="@+id/ibtn_backup"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorMainGray"
                    android:paddingLeft="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="登录"
                    android:textColor="#fff" />


            </LinearLayout>
            <View
                android:background="@color/colorMainGray"
               android:layout_alignParentRight="true"
                android:layout_width="70dp"
                android:layout_height="match_parent"

            />

        </RelativeLayout>
        </android.support.v7.widget.Toolbar>


    <com.example.andy.connectutil.View.OverScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/ScrollViewContainer"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >
            <com.example.andy.connectutil.Activity.HorizontalRadioGroup
                android:id="@+id/radio_group"
                android:layout_marginBottom="@dimen/block_divider_height"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            </com.example.andy.connectutil.Activity.HorizontalRadioGroup>



            <LinearLayout style="@style/InputItem">

                <ImageView
                    style="@style/InputIcon"
                    android:src="@mipmap/ic_mail"/>

                <EditText
                    android:id="@+id/et_account"
                    style="@style/LinearInputText"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/auth_code_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout style="@style/InputItem"
                    android:layout_weight="1">



                    <EditText
                        android:id="@+id/et_code"
                        style="@style/LinearInputText"
                        android:hint="@string/hint_auth_code"
                        android:inputType="number" />

                </LinearLayout>

                <Button
                    style="@style/BigButton"
                    android:layout_marginLeft="10dp"
                    android:layout_width="100dp"
                    android:id="@+id/btn_get_code"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/get_auth_code"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_item"
                style="@style/InputItem">

                <ImageView
                    style="@style/InputIcon"
                    android:src="@mipmap/ic_lock"/>

                <EditText
                    android:id="@+id/et_password"
                    style="@style/LinearInputText"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </LinearLayout>


            <Button
                style="@style/BigButton"
                android:text="@string/action_reset_pwd"
                android:id="@+id/btn_reset_password"
                android:background="@drawable/btn_main_selector"/>





        </LinearLayout>
    </com.example.andy.connectutil.View.OverScrollView>

</LinearLayout>